{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 179,
  "lineage": "2f048123-2fcd-2a09-ff2e-213cac4031b6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "api_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:418295718487:internet-gateway/igw-0f1232950c69b6647",
            "id": "igw-0f1232950c69b6647",
            "owner_id": "418295718487",
            "tags": {
              "Environment": "dev",
              "Name": "API Internet Gateway"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "API Internet Gateway"
            },
            "vpc_id": "vpc-0054d330a71983d00"
          },
          "dependencies": [
            "aws_vpc.api_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:418295718487:route-table/rtb-082758ad97c8e8ee0",
            "id": "rtb-082758ad97c8e8ee0",
            "owner_id": "418295718487",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f1232950c69b6647",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "Public Route Table"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0054d330a71983d00"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.api_igw",
            "aws_vpc.api_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d4b2b3fee28eb8d5",
            "route_table_id": "rtb-082758ad97c8e8ee0",
            "subnet_id": "subnet-02561ad6aa494ce82"
          },
          "dependencies": [
            "aws_internet_gateway.api_igw",
            "aws_route_table.public_route_table",
            "aws_subnet.private_subnet",
            "aws_vpc.api_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad22e9e49c54360e",
            "route_table_id": "rtb-082758ad97c8e8ee0",
            "subnet_id": "subnet-0616e01e6f82d7554"
          },
          "dependencies": [
            "aws_internet_gateway.api_igw",
            "aws_route_table.public_route_table",
            "aws_subnet.private_subnet",
            "aws_vpc.api_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aurora_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:418295718487:security-group/sg-0ee607921f47fa30a",
            "description": "Security group for Aurora database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ee607921f47fa30a",
            "ingress": [
              {
                "cidr_blocks": [
                  "104.30.134.142/32"
                ],
                "description": "Allow PostgreSQL access from Lambda",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0307ad6875fa1dc71"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "aurora-sg",
            "name_prefix": "",
            "owner_id": "418295718487",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "Aurora Security Group"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Aurora Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0054d330a71983d00"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lambda_sg",
            "aws_vpc.api_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:418295718487:security-group/sg-0307ad6875fa1dc71",
            "description": "Security group for Lambda functions",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0307ad6875fa1dc71",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow traffic within VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "lambda-sg",
            "name_prefix": "",
            "owner_id": "418295718487",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "Lambda Security Group"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Lambda Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0054d330a71983d00"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.api_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:418295718487:subnet/subnet-02561ad6aa494ce82",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02561ad6aa494ce82",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "418295718487",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "Private Subnet 0"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Private Subnet 0"
            },
            "vpc_id": "vpc-0054d330a71983d00"
          },
          "dependencies": [
            "aws_vpc.api_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:418295718487:subnet/subnet-0616e01e6f82d7554",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0616e01e6f82d7554",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "418295718487",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "Private Subnet 1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Private Subnet 1"
            },
            "vpc_id": "vpc-0054d330a71983d00"
          },
          "dependencies": [
            "aws_vpc.api_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "api_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:418295718487:vpc/vpc-0054d330a71983d00",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dd27f74c9b99699c",
            "default_route_table_id": "rtb-0a421fc8fb0ad3b11",
            "default_security_group_id": "sg-0672d4400bf6cec38",
            "dhcp_options_id": "dopt-0ec49c2ed605fbcde",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0054d330a71983d00",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a421fc8fb0ad3b11",
            "owner_id": "418295718487",
            "tags": {
              "Environment": "dev",
              "Name": "API VPC"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "API VPC"
            }
          }
        }
      ]
    }
  ]
}